<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsActivity">

    <ScrollView
        style="@style/TextAppearance.AppCompat.Widget.Switch"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_section_title_general"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_track_device_usage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/settings_switch_label_track_device_usage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_description_track_device_usage" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_start_on_boot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/settings_switch_label_start_on_boot" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_description_start_on_boot" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@color/onBackgroundLightColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_section_title_reminder"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/label_clean_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/settings_label_clean_interval"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            <Button
                android:id="@+id/button_edit_clean_interval"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/settings_button_edit_clean_interval"
                app:icon="@drawable/ic_alarm_24dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@color/onBackgroundLightColor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_section_title_overlay"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_overlay_enabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/settings_switch_enable_overlay_label" />

            <TextView
                android:id="@+id/description_enable_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_description_enable_overlay" />

            <TextView
                android:id="@+id/label_max_overlay_particles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/settings_label_max_particles"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_max_overlay_particles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:value="50"
                android:valueFrom="5"
                android:valueTo="100" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_description_max_particles" />

            <TextView
                android:id="@+id/label_particle_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/settings_label_particle_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_particle_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:value="24"
                android:valueFrom="10"
                android:valueTo="50" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_description_particle_size" />

            <TextView
                android:id="@+id/label_particle_transparency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/settings_label_particle_transparency"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_particle_transparency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:value="50"
                android:valueFrom="0"
                android:valueTo="100" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/settings_description_particle_transparency" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>